# corporate-it-python-sharedutils

./: .gitignore  README.md  pyproject.toml
src/corporate_it_python_sharedutils/: format_utils.py  massive_utils.py  postgres_utils.py  postgresql_utils.py  schema_manager.py  strings.py  tiingo_utils.py
src/intelligent_day_trading/: main.py
src/intelligent_day_trading/core/: confidence.py  constants.py  signal_provider.py
src/intelligent_day_trading/engines/: factory.py
src/intelligent_day_trading/engines/v1/: provider_configurations.py  trading_rule_engine.py
src/intelligent_day_trading/examples/: input_1_profile.json  input_3_market_data.json  input_4_open_orders.json  output_1_trading_signal.json
src/intelligent_day_trading/providers/v1/: breakout_provider.py  gap_provider.py  mean_reversion_provider.py  momentum_provider.py  news_provider.py  range_provider.py  relative_strength_provider.py  reversal_provider.py  scalping_provider.py  sector_rotation_provider.py  trend_following_provider.py  volatility_provider.py
src/intelligent_day_trading/rule_engine/: main.py
src/intelligent_day_trading/rule_engine/core/: signal_builder.py  timestamp_helper.py
src/intelligent_day_trading/rule_engine/engines/: factory.py
src/intelligent_day_trading/rule_engine/engines/v1/: trading_rule_engine.py
src/intelligent_day_trading/rule_engine/examples/: input_2_watchlist_entry.json
src/intelligent_day_trading/rule_engine/providers/v1/: breakout_provider.py  gap_provider.py  mean_reversion_provider.py  momentum_provider.py  news_provider.py  range_provider.py  (+6 more)
